--- a/kmeans clustering.ipynb
+++ b/kmeans clustering.ipynb
@@ -244,8 +244,8 @@
     "plt.scatter(x[y_kmeans==4,0],x[y_kmeans==4,1],color='black',s=100,label='cluster 5')\n",
     "plt.scatter(kmeans.cluster_centers_[:, 0],kmeans.cluster_centers_[:, 1],label='centroids',s=300,color='green')\n",
     "plt.legend()\n",
-    "plt.xlabel('Spending score')\n",
-    "plt.ylabel('Annual income')\n",
+    "plt.xlabel('Annual income')\n",
+    "plt.ylabel('Spending score')\n",
     "plt.title('Clustering')"
    ]
   },
